Fixed .header p colour in Dark Mode

--- a/style.css
+++ b/style.css
@@ -541,9 +541,9 @@ a {
 	.fa-at {
 		color: #FFF;
 	}*/
-	.header p {
+	/*.header p {
 		color:var(--header-text);
-	}
+	}*/
 	p {
 		color:var(--nice-white);
 	}
